# dataset-curator

./: Dockerfile  LICENSE  README.md  demo.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: app.py  dataset.py  environment.py  graders.py
